fix nav spacing

--- a/css/style.css
+++ b/css/style.css
@@ -156,8 +156,8 @@ a {
   font-size: 0.8em;
   color: rgb(19, 18, 19);
   text-align: center;
-  padding: 0 30px;
-  letter-spacing: 5px;
+  padding: 0 10px;
+  letter-spacing: 3Spx;
 }
 
 a:hover {
@@ -201,6 +201,8 @@ a:hover {
 
   a {
     font-size: 1em;
+    padding: 0 30px;
+    letter-spacing: 5px;
   }
 
   .card-content {
